--- a/helloworld/src/index.css
+++ b/helloworld/src/index.css
@@ -1,5 +1,8 @@
 body {
+  padding: 50px;
   margin: 0;
+  background-color: #66CCFF;
+  font-family: sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -14,4 +17,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+#container {
+  display: flex;
+  justify-content: center;
 }
