--- a/helloworld/src/MenuContainer.css
+++ b/helloworld/src/MenuContainer.css
@@ -1,3 +1,16 @@
-.menuContainerMain li{
-    margin-bottom: 10px;
-}
+.toDoList {
+    padding: 50px;
+    margin: 0;
+    background-color: #66CCFF;
+    font-family: sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+      "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
