--- a/helloworld/src/MenuContainer.css
+++ b/helloworld/src/MenuContainer.css
@@ -2,6 +2,27 @@ body {
   background-color: #66CCFF;
 }
 
+ul.header li {
+  display: inline;
+  list-style-type: none;
+  margin: 0;
+}
+ul.header {
+  background-color: #111;
+  padding: 0;
+}
+ul.header li a {
+  color: #FFF;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 20px;
+  display: inline-block;
+}
+.content {
+  background-color: #FFF;
+  padding: 20px;
+}
+
 .toDoList {
     padding: 50px;
     margin: 0;
