--- a/helloworld/src/MenuContainer.css
+++ b/helloworld/src/MenuContainer.css
@@ -18,6 +18,11 @@ ul.header li a {
   padding: 20px;
   display: inline-block;
 }
+/* For the NavLink/s, a class value "active" is assigned to that react-router relement*/
+.active {
+  background-color: #0099FF;
+}
+
 .content {
   background-color: #FFF;
   padding: 20px;
